gitlab/ingress-gitlab.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    haproxy.org/check: "true"
    haproxy.org/forwarded-for: "false"
    haproxy.org/load-balance: "roundrobin"
    haproxy.org/cookie-persistence: "mycookie"
spec:
  tls:
  - hosts:
      - gitlab.kubernetes.local
    secretName: kubernetes.local
  rules:
  - host: gitlab.kubernetes.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gitlab
            port:
              number: 5580
